Added some changes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "Ridwan",
-  "license": "ISC",
+  "license": "MIT",
   "description": "Backend exam",
   "dependencies": {
     "bcryptjs": "^3.0.2",
